@@ -1,66 +1,3 @@
-comment "Generic System Support"
-
-config BR2_TARGET_GENERIC_ACCESS_POINT
-	bool "Generic wireless access point"
-	select BR2_PACKAGE_WIRELESS_TOOLS
-	select BR2_PACKAGE_DHCP_RELAY
-	select BR2_PACKAGE_BRIDGE
-	help
-	  Board support for a generic wireless access point.
-
-
-config BR2_TARGET_GENERIC_FIREWALL
-	bool "Generic firewall"
-	select BR2_PACKAGE_IPTABLES
-	help
-	  Board support for a generic firewalling router.
-
-
-config BR2_TARGET_GENERIC_DEV_SYSTEM
-	bool "Generic development system"
-	depends on BR2_USE_WCHAR && BR2_PROGRAM_INVOCATION
-	select BR2_CCACHE
-	select BR2_PACKAGE_GDB
-	select BR2_PACKAGE_GDB_SERVER
-	select BR2_PACKAGE_BASH
-	select BR2_PACKAGE_BZIP2
-	select BR2_PACKAGE_COREUTILS
-	select BR2_PACKAGE_DIFFUTILS
-	select BR2_PACKAGE_ED
-	select BR2_PACKAGE_FINDUTILS
-	select BR2_PACKAGE_FLEX
-	select BR2_PACKAGE_GAWK
-	select BR2_PACKAGE_GCC_TARGET
-	select BR2_PACKAGE_CCACHE_TARGET
-	select BR2_PACKAGE_GREP
-	select BR2_PACKAGE_MAKE
-	select BR2_PACKAGE_PATCH
-	select BR2_PACKAGE_SED
-	select BR2_PACKAGE_TAR
-	select BR2_PACKAGE_MICROPERL
-	select BR2_PACKAGE_AUTOCONF
-	select BR2_PACKAGE_AUTOMAKE
-	select BR2_PACKAGE_DROPBEAR
-	select BR2_PACKAGE_FILE
-	select BR2_PACKAGE_GZIP
-	select BR2_PACKAGE_LESS
-	select BR2_PACKAGE_LIBTOOL
-	select BR2_PACKAGE_M4
-	select BR2_PACKAGE_E2FSPROGS
-	select BR2_PACKAGE_NCURSES
-	select BR2_PACKAGE_NETKITBASE
-	select BR2_PACKAGE_PCIUTILS
-	select BR2_PACKAGE_PROCPS
-	select BR2_PACKAGE_RSYNC
-	select BR2_PACKAGE_STRACE
-	select BR2_PACKAGE_UTIL-LINUX
-	select BR2_PACKAGE_ZLIB
-	help
-	  Board support for a generic development system.
-
-comment "Generic development system requires a toolchain with WCHAR and PROGRAM_INVOCATION support"
-	depends on !(BR2_USE_WCHAR && BR2_PROGRAM_INVOCATION)
-
 if !(BR2_TARGET_ATMEL||BR2_TARGET_KWIKBYTE||BR2_TARGET_VALKA)
 
 config BR2_TARGET_GENERIC_HOSTNAME
